--- a/index.html
+++ b/index.html
@@ -5,31 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protect The Zoo</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      .main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-      }
-      .game {
-        background-image: url(public/images/1.webp);
-        border: solid 10px blue;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-position: center;
-      }
-      img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain;
-      }
-    </style>
+    <link rel="stylesheet" href="public/css/styles.css">
   </head>
   <body>
     <div class="main">
