--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="public/css/styles.css">
   </head>
   <body>
+  
     <div class="main">
-      <canvas class="game" width="770px" height="500px"> </canvas>
+      <img class="frame" src="./public/images/frame.png" alt="" srcset="">
+      <canvas class="game border-gradient border-gradient-purple" width="770px" height="500px"> </canvas>
     </div>
+    <script src="public/js/canvas.js"></script>
   </body>
 </html>
