--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Protect The Zoo</title>
+    <title>DAP DICH</title>
     <link rel="stylesheet" href="public/css/styles.css">
   </head>
   <body>
   
     <div class="main">
       <img class="frame" src="./public/images/frame.png" alt="" srcset="">
-      <canvas class="game border-gradient border-gradient-purple" width="770px" height="500px"> </canvas>
+      <div class="home-screen">
+        <img class="name" src="./public/images/name_game.png" alt="" srcset="">
+        <a class="btn" onclick="play();">PLAY</a>
+      </div>
+      <canvas class="game" width="770px" height="500px"> </canvas>
     </div>
+    <script src="public/js/javascript.js"></script>
     <script src="public/js/canvas.js"></script>
   </body>
 </html>
