--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="main">
-      <canvas class="game" width="770px" height="500px"> </canvas>
+      <canvas class="game" width="852px" height="450px"> </canvas>
+      <!-- <canvas id="my_canvas" width="870px" height="470px"></canvas> -->
     </div>
+    <!-- <script src="public/js/canvas.js"></script> -->
   </body>
 </html>
