--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   
     <div class="main">
       <img class="frame" src="./public/images/frame.png" alt="" srcset="">
-      <div class="home-screen">
+      <!-- <div class="home-screen">
         <img class="name" src="./public/images/name_game.png" alt="" srcset="">
         <a class="btn" onclick="play();">PLAY</a>
-      </div>
-      <canvas class="game" width="770px" height="500px"> </canvas>
+      </div> -->
+      <canvas class="game" width="770px" height="500px"></canvas>
     </div>
     <script src="public/js/javascript.js"></script>
+    <script src="public/js/config.js"></script>
+    <script src="public/js/corona.js"></script>
+    <script src="public/js/data.js"></script>
     <script src="public/js/canvas.js"></script>
   </body>
 </html>
