--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DAP DICH</title>
-    <link rel="stylesheet" href="public/css/styles.css">
+    <link rel="stylesheet" href="public/css/styles.css" />
   </head>
   <body>
-  
     <div class="main">
-      <img class="frame" src="./public/images/frame.png" alt="" srcset="">
+      <img class="frame" src="./public/images/frame.png" alt="" srcset="" />
       <!-- <div class="home-screen">
         <img class="name" src="./public/images/name_game.png" alt="" srcset="">
         <a class="btn" onclick="play();">PLAY</a>
       </div> -->
       <canvas class="game" width="770px" height="500px"></canvas>
+
+      <!-- <div id="element"></div> -->
     </div>
-    <script src="public/js/javascript.js"></script>
-    <script src="public/js/config.js"></script>
-    <script src="public/js/corona.js"></script>
     <script src="public/js/data.js"></script>
+    <script src="public/js/javascript.js"></script>
+    <script src="public/js/corona.js"></script>
+    <script src="public/js/config.js"></script>
     <script src="public/js/canvas.js"></script>
+    <!-- <script src="public/js/test.js"></script> -->
   </body>
 </html>
