--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
   <body>
     <div class="main">
-      <img class="frame" src="./public/images/frame.png" alt="" srcset="" />
-      <!-- <div class="home-screen">
+      <img class="frame" src="./public/images/Khung.png" alt="" srcset="" />
+      <div class="home-screen">
         <img class="name" src="./public/images/name_game.png" alt="" srcset="">
-        <a class="btn" onclick="play();">PLAY</a>
-      </div> -->
+        <a class="btn btn-play">PLAY</a>
+        <a class="btn btn-restart">RESTART</a>
+      </div>
       <canvas class="game" width="770px" height="500px"></canvas>
 
       <!-- <div id="element"></div> -->
