--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <div class="main">
       <img class="frame" src="./public/images/Khung.png" alt="" srcset="" />
       <div class="home-screen">
-        <img class="name" src="./public/images/name_game.png" alt="" srcset="">
+        <img
+          class="name"
+          src="./public/images/name_game.png"
+          alt=""
+          srcset=""
+        />
         <a class="btn btn-play">PLAY</a>
         <a class="btn btn-restart">RESTART</a>
       </div>
+      <div class="display waveText"></div>
       <canvas class="game" width="770px" height="500px"></canvas>
-
-      <!-- <div id="element"></div> -->
     </div>
     <script src="public/js/data.js"></script>
     <script src="public/js/corona.js"></script>
