--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
         <a class="btn-continue"
           ><img src="./public/images/buttonplay.png" alt=""
         /></a>
+        <a class="btn-home"><img src="./public/images/btnhome.png" alt="" /></a>
       </div>
       <div class="high-score-screen">
         <div class="board">
           <h1>HIGH SCORE</h1>
           <div class="scrollbar">
-            <div class="score">
-              <div class="number">Score</div>
-              <div class="time">Time</div>
-            </div>
-        
           </div>
         </div>
         <a class="btn-back">BACK</a>
